--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "bcrypt": "^5.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.2",
     "nodemon": "^3.0.3",
